Added ruby and puppet language servers.

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,6 +9,13 @@
       "command": "terraform-lsp",
       "filetypes": ["terraform"],
       "initializationOptions": {}
+    },
+    "puppet": {
+      "command": "ruby",
+      "args": ["/Users/taitken/src/github/lingua-pupuli/puppet-editor-services/puppet-languageserver","--stdio"],
+      "cwd": "/Users/taitken/src/github/lingua-pupuli/puppet-editor-services",
+      "filetypes": ["puppet"],
+      "rootPatterns": [".git/", "metadata.json"]
     }
   }
 }
